Some fixes on small mobile phone

--- a/css/framework.css
+++ b/css/framework.css
@@ -303,4 +303,50 @@
         gap: 10px;
     }
 }
+.ribbon {
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    overflow: hidden;
+    right: -7px;
+    top: -7px;
+    z-index: 1;
+}
+.ribbon span {
+    color: white;
+    background-color: var(--orange-color);
+    line-height: 20px;
+    width: 160px;
+    display: block;
+    text-align: center;
+    position: absolute;
+    transform: rotate(45deg);
+    right: -41px;
+    top: 25px;
+    font-weight: 600;
+    padding: 3px 0;
+    box-shadow: 0 3px 10px -5px black;
+}
+.ribbon span::before {
+    content: "";
+    position: absolute;
+    border-top: 7px solid var(--orange-color);
+    border-right: 7px solid var(--orange-color);
+    border-left: 7px solid transparent;
+    border-bottom: 7px solid transparent;
+    top: 25px;
+    left: 136px;
+    z-index: -1;
+}
+.ribbon span::after {
+    content: "";
+    position: absolute;
+    border-top: 7px solid var(--orange-color);
+    border-right: 7px solid transparent;
+    border-left: 7px solid var(--orange-color);
+    border-bottom: 7px solid transparent;
+    top: 25px;
+    left: 12px;
+    z-index: -1;
+}
 /* End Components */
