--- a/css/style.css
+++ b/css/style.css
@@ -451,7 +451,6 @@ aside li a:hover {
 }
 /* Latest Post Box End */
 /* Social Media Start */
-
 .social-media .box {
     padding-left: 70px;
 }
@@ -498,6 +497,19 @@ aside li a:hover {
 .social-media .linkedin i,
 .social-media .linkedin a {
     background-color: #0077b5;
+}
+@media (max-width: 395px) {
+    .social-media .box {
+        padding: 10px 10px 10px 70px;
+        font-size: 12px;
+    }
+    .social-media .box i {
+        font-size: 25px;
+    }
+    .social-media .box a {
+        padding: 3px 6px;
+        font-size: 9px;
+    }
 }
 /* Social Media End */
 /* Boxs Area End */
@@ -701,6 +713,11 @@ aside li a:hover {
 @media (min-width: 768px) {
     .profile-page .overview .avatar-box {
         border-right: 1px solid #eee;
+    }
+}
+@media (max-width: 767px) {
+    .profile-page .overview .avatar-box {
+        border-bottom: 1px solid #eee;
     }
 }
 .profile-page .overview .avatar-box img {
@@ -933,8 +950,18 @@ aside li a:hover {
     font-size: 42px;
     right: 0;
     bottom: 20px;
-    opacity: .4;
+    opacity: .2;
     font-weight: 600;
+}
+@media (max-width: 360px) {
+    .friends-page .box .control span {
+        font-size: 10px;
+    }
+    .friends-page .box .control a {
+        padding: 3px 6px;
+        font-size: 10px;
+        border-radius: 4px;
+    }
 }
 /* Friends Page End */
 
@@ -1071,52 +1098,6 @@ aside li a:hover {
     .plans-page .plan-box ul li span {
         font-size: 12px;
     }
-}
-.ribbon {
-    position: absolute;
-    width: 100px;
-    height: 100px;
-    overflow: hidden;
-    right: -7px;
-    top: -7px;
-    z-index: 1;
-}
-.ribbon span {
-    color: white;
-    background-color: var(--orange-color);
-    line-height: 20px;
-    width: 160px;
-    display: block;
-    text-align: center;
-    position: absolute;
-    transform: rotate(45deg);
-    right: -41px;
-    top: 25px;
-    font-weight: 600;
-    padding: 3px 0;
-    box-shadow: 0 3px 10px -5px black;
-}
-.ribbon span::before {
-    content: "";
-    position: absolute;
-    border-top: 7px solid var(--orange-color);
-    border-right: 7px solid var(--orange-color);
-    border-left: 7px solid transparent;
-    border-bottom: 7px solid transparent;
-    top: 25px;
-    left: 136px;
-    z-index: -1;
-}
-.ribbon span::after {
-    content: "";
-    position: absolute;
-    border-top: 7px solid var(--orange-color);
-    border-right: 7px solid transparent;
-    border-left: 7px solid var(--orange-color);
-    border-bottom: 7px solid transparent;
-    top: 25px;
-    left: 12px;
-    z-index: -1;
 }
 /* Plans Page End */
 /* CheckBox toggle Effect */
